Fix navbar to always visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,12 @@ body {
   position: relative;
 }
 
+#navbar-example2 {
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+}
+
 .jumbotron {
   height: 100vh;
   background-color: transparent !important; 
